Merged PR 8129: release/v1.0.1-dev-prepare
release/v1.0.1-dev-prepare

Related work items: #1354, #1355, #1356, #1357, #1358, #1361, #1362, #1363, #1364, #1365, #1366, #1367, #1368, #1369, #1371, #1374, #1375, #1381, #1382, #1383, #1384, #1385, #1388, #1390, #1391, #1398, #1399, #1400, #1401, #1402, #1403, #1404, #1405, #1414, #1417, #1419, #1421, #1430, #1431, #1432, #1434, #1435, #1436, #1440, #1441, #1442, #1443, #1444, #1445, #1446, #1447, #1448, #1449, #1450, #1451, #1452, #1453, #1456, #1457, #1462, #1466, #1470, #1472, #1475, #1476, #1478, #1480, #1490, #1491, #1495, #29692